[gd_scene load_steps=5 format=1]

[ext_resource path="res://genius/genius.gd" type="Script" id=1]
[ext_resource path="res://telaInicial/sprites/monalisa.png" type="Texture" id=2]
[ext_resource path="res://telaInicial/sprites/orgao.png" type="Texture" id=3]
[ext_resource path="res://telaInicial/pixel.fnt" type="BitmapFont" id=4]

[node name="EventPlayer" type="EventPlayer"]

stream/stream = null
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/pitch_scale = 1.0
stream/tempo_scale = 1.0
stream/autoplay = false
stream/paused = false
script/script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="TextureFrame" type="TextureFrame" parent="ParallaxBackground/ParallaxLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 608.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="teclado1" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -8.0
margin/top = 362.0
margin/right = 216.0
margin/bottom = 622.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="teclado2" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 218.0
margin/top = 365.0
margin/right = 442.0
margin/bottom = 625.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="teclado3" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 454.0
margin/top = 365.0
margin/right = 678.0
margin/bottom = 625.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 90.0
margin/right = 586.0
margin/bottom = 246.0

[node name="Label" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 486.0
margin/bottom = 152.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "tt"
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="teclado1" to="." method="_on_teclado1_pressed"]

[connection signal="pressed" from="teclado2" to="." method="_on_teclado2_pressed"]

[connection signal="pressed" from="teclado3" to="." method="_on_teclado3_pressed"]


